--- a/clone/index.html
+++ b/clone/index.html
@@ -60,7 +60,7 @@
             <div class="pre-order-content">
                 <div class="item">
                     <div style="right: 7.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="item">
                     <div style="right: 7.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="item">
                     <div style="right: 7.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="item">
                     <div style="right: 7.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="last-item">
                     <div style="right: 7.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <img src="https://cdn.shopify.com/s/files/1/0974/7950/files/Monogram_Keyboard_2_878639a5-2865-4c4f-a21e-498f3a3db3b8_750x422_crop_center.jpg?v=1712087494" />
+                    <div class="last-product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -113,7 +113,7 @@
             <div class="products">
                 <div class="item">
                     <div style="right: 22.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="item">
                     <div style="right: 22.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="item">
                     <div style="right: 22.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="item">
                     <div style="right: 22.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -145,56 +145,56 @@
                 </div>
                 <div class="item">
                     <div style="right: 22.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img class="product-img" src="https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709" />
+                    <div class="product-img"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
