updating products section

--- a/clone-mod/index.html
+++ b/clone-mod/index.html
@@ -113,7 +113,7 @@
             <div class="products">
                 <div class="item">
                     <div style="right: 22.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="item">
                     <div style="right: 22.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="item">
                     <div style="right: 22.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="item">
                     <div style="right: 22.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -145,49 +145,49 @@
                 </div>
                 <div class="item">
                     <div style="right: 22.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
@@ -195,7 +195,7 @@
                 </div>
                 <div class="item">
                     <div style="right: 22.5px;" class="tag-pre-order">PRE-ORDER</div>
-                    <div class="product-img"></div>
+                    <div class="product-img-2"></div>
                     <div style="width: 100%; display: flex; align-items: end; justify-content: space-between;">
                         <h3 class="product-title">MINI CONSOLE</h3>
                         <p class="product-sold-out">Sold Out</p>
